# dreg

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  android.sh  quad.toml  wasm.sh
assets/: asteroid_rock1.mtl  block_rock.mtl
java/: MainActivity.java
src/: aliens.rs  asteroids.rs  bullets.rs  common.rs  explosions.rs  game.rs  index.html  instruments.rs  main.rs  object_file.rs  shaders.rs  stars.rs  useful_objects.rs
